# ldhcp

./: Cargo.toml
ldhcpd/: Cargo.toml
ldhcpd/src/: app.rs  args.rs  main.rs
ldhcpd/src/common/: description.rs  mod.rs  transaction_error.rs
ldhcpd/src/common/scopes/: mod.rs  new.rs  type.rs
ldhcpd/src/database/: error.rs  mod.rs  order_by.rs  page_size.rs  unknown_field.rs
ldhcpd/src/database/reservation/: get.rs  insert.rs  insert.sql  mod.rs
ldhcpd/src/database/reservation/get/: field.rs  fields.rs  mod.rs  result.rs
ldhcpd/src/database/scope/: insert.rs  insert.sql  mod.rs  types.rs
ldhcpd/src/model/: client_id.rs  description.rs  mod.rs
ldhcpd/src/model/reservations/: insert.rs  insert.sql  mod.rs  select.rs
ldhcpd/src/model/scopes/: mod.rs  new.rs
ldhcpd/src/new/: early.rs  error.rs  mod.rs
ldhcpd/src/routes/: mod.rs
ldhcpd/src/routes/reservations/: get.rs  mod.rs  post.rs
ldhcpd/src/routes/v1/: mod.rs
ldhcpd/src/routes/v1/reservations/: get.rs  mod.rs  post.rs
ldhcpd/src/routes/v1/reservations/post/: mod.rs  new_reservation.rs
ldhcpd/src/util/: mod.rs  validate_body.rs
migrations/: 20240808-1726-create-scopes-and-options.down.sql  20240808-1726-create-scopes-and-options.up.sql  20240808-1748-create-reservations.up.sql  20240816-2225-add-renewal-time-field-to-reservations.down.sql  20240816-2225-add-renewal-time-field-to-reservations.up.sql
src/: args.rs  init_error.rs  main.rs
src/new/: error.rs  mod.rs
