[package]
name = "ldhcp"
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
description = "DHCP Server built on Huntsman and SQLite3"
repository = "https://github.com/shipsimfan/ldhcp"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
huntsman.git = "https://github.com/shipsimfan/huntsman"
huntsman-http.git = "https://github.com/shipsimfan/huntsman"

sql.git = "https://github.com/shipsimfan/lib-sql"
sqlite.git = "https://github.com/shipsimfan/lib-sql"
