[package]
name = "ldhcpd"
description = "DHCP Server built on Huntsman and SQLite3"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
huntsman.git = "https://github.com/shipsimfan/huntsman"
huntsman-http.git = "https://github.com/shipsimfan/huntsman"

sql.git = "https://github.com/shipsimfan/lib-sql"
sqlite.git = "https://github.com/shipsimfan/lib-sql"
sql-migrations.git = "https://github.com/shipsimfan/lib-sql-migrations"

argparse.git = "https://github.com/shipsimfan/lib-argparse"
oak.git = "https://github.com/shipsimfan/oak"
