[package]
name = "ldhcpd"
description = "DHCP Server built on Huntsman and SQLite3"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
huntsman.git = "https://github.com/shipsimfan/huntsman"
huntsman-http.git = "https://github.com/shipsimfan/huntsman"

json = { git = "https://github.com/shipsimfan/lib-json", branch = "lib-data-format" }
data-format.git = "https://github.com/shipsimfan/lib-data-format"

sql.git = "https://github.com/shipsimfan/lib-sql"
sqlite.git = "https://github.com/shipsimfan/lib-sql"
sql-migrations.git = "https://github.com/shipsimfan/lib-sql-migrations"

net-utils.git = "https://github.com/shipsimfan/lib-net-utils"

argparse.git = "https://github.com/shipsimfan/lib-argparse"
oak.git = "https://github.com/shipsimfan/oak"
