[package]
name = "ldhcpd"
description = "DHCP Server built on Huntsman and SQLite3"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argparse.git = "https://github.com/shipsimfan/lib-argparse"
data-format.git = "https://github.com/shipsimfan/lib-data-format"
router = { git = "https://github.com/shipsimfan/lib-router", features = [
    "sqlite",
] }

net-utils.git = "https://github.com/shipsimfan/lib-net-utils"
